Stage1 first try (#9)
* Stage1 first try

* codeClimate fix

* codeClimate fix

Co-authored-by: Artyom Drozdov <artyomcool2@gmail.com>